--- a/wicedhack/main.html
+++ b/wicedhack/main.html
@@ -14,6 +14,13 @@
          do_ajax('/fb_report.html','currentData',null,0,null,null,'<p>There was a problem retrieving data</p>',null);
          timeoutID = setTimeout('reloadData()', 1000);
        }
+       function loadfbdata()
+       {
+        do_ajax('https://graph.facebook.com/wiced123/posts?access_token=CAAKbXnsGZA3gBAPrZB00QcUtdvbwKPoPIIPrePrjX0xwr2Xw1V9fBRX7LlFxvan84cc5F1nOE2fZA1QvkC8COqahAJMH56onsBIxPWouhF7fhlPW291f2NdPVHjyyOeJLNjZCyRFWJecRxhSom97IFuxTF5hmIAJDaHAdu2NqHJp3d1HO3VfJ8DDjT4oYys9z3c2kAk57ap5ZAetkAn2BxjR1TI3JH7wZD',
+         'currentData', null, 0, null, null, '<p>FB data error</p>, null');
+        timeoutID = setTimeout('reloadData()', 1000);
+
+       }
     /* ]]> */
     </script>
   </head>
@@ -33,6 +40,7 @@
     </table>
     <div id="currentData" >Retrieving current sensor data...
     </div>
+    <button type="button" onclick="loadfbdata()">LoadFBData</button>
     <div style="margin-left:20px" id="main_text" >
       <p>Click a button, then look at the UART ... </p>
       <form name="input" action="/button_handler" method="get"> <table> <tr>
