--- a/wicedhack/main.html
+++ b/wicedhack/main.html
@@ -9,6 +9,75 @@
     <script src="../../scripts/general_ajax_script.js" type="text/javascript"></script>
     <script type="text/javascript">
     /* <![CDATA[ */
+    function custom_ajax( ajax_url, elem_id, start_text, disp_progress, inprog_text, endfunc, failtext, failfunc )
+{
+  req = null;
+  if (elem_id && start_text) document.getElementById(elem_id).innerHTML = start_text;
+  if (window.XMLHttpRequest)
+  {
+    req = new XMLHttpRequest();
+    if (req.overrideMimeType)
+    {
+      req.overrideMimeType('text/xml');
+    }
+  }
+  else if (window.ActiveXObject)
+  {
+    try {
+      req = new ActiveXObject("Msxml2.XMLHTTP");
+    } catch (e)
+    {
+      try {
+          req = new ActiveXObject("Microsoft.XMLHTTP");
+      } catch (e) {
+        alert("Your browser does not support AJAX - please use a different browser.");
+        return;
+      }
+    }
+  }
+  try {
+    req.onprogress = function( e )
+    {
+        if (elem_id && disp_progress) document.getElementById(elem_id).innerHTML = req.responseText;
+    }
+  } catch (e) { if (elem_id && inprog_text) document.getElementById(elem_id).innerHTML = inprog_text; }
+  req.onreadystatechange = function()
+  {
+    if(req.readyState == 4)
+    {
+      if(req.status == 200)
+      {
+        var jsonObj = JSON.parse(req.responseText);
+        var bodyText = "Nothing to Display";
+        var resText = undefined;
+        for (var i = jsonObj["data"].length - 1; i >= 0; i--) {
+          if(jsonObj["data"][i]["message"] != undefined){
+            if (resText == undefined)
+              resText = jsonObj["data"][i]["message"];
+            else
+            resText = resText + "\n" + jsonObj["data"][i]["message"];
+            console.log("[JSON]", jsonObj["data"][i]["message"]);
+          }
+        };
+        // if (resText == undefined)
+        //  insert_and_eval(elem_id, bodyText);
+        // else <p></p>
+         insert_and_eval(elem_id, resText);
+        //if (elem_id) insert_and_eval( elem_id, req.responseText );
+        if (endfunc) endfunc(req, elem_id);
+      }
+      else
+      {
+        if (elem_id && failtext) document.getElementById(elem_id).innerHTML = failtext + " : " + req.statusText;
+        if (failfunc) failfunc(req, elem_id);
+      }
+    }
+  };
+  req.open("GET", ajax_url, true);
+  req.send(null);
+}
+
+
        function reloadData()
        {
          /*do_ajax('/fb_report.html','currentData',null,0,null,null,'<p>There was a problem retrieving data</p>',null);
@@ -16,7 +85,7 @@
        }
        function loadfbdata()
        {
-        do_ajax('https://graph.facebook.com/wiced123/posts?access_token=CAAKbXnsGZA3gBAHXB9ro6QcIquhRBmlW2Y2fEGa4sQrACM3VxMLru7FS5tPFZApV4dru5Dlh81WLrAyUC9yYVX57RgLdAighkeERgTxVohVQqPvI7ZBRy9oDR5BZA4g1o5r2AnocutDZBFiGisES00G9WnbS2Et81QOqUJbG0iZCGyB2nnjo8N7Re1H1H4a5kx3p843zOPKuhd6nsP0Ujzs0gZC5vmZBoLcZD',
+        custom_ajax('https://graph.facebook.com/wiced123/posts?access_token=CAAKbXnsGZA3gBAHXB9ro6QcIquhRBmlW2Y2fEGa4sQrACM3VxMLru7FS5tPFZApV4dru5Dlh81WLrAyUC9yYVX57RgLdAighkeERgTxVohVQqPvI7ZBRy9oDR5BZA4g1o5r2AnocutDZBFiGisES00G9WnbS2Et81QOqUJbG0iZCGyB2nnjo8N7Re1H1H4a5kx3p843zOPKuhd6nsP0Ujzs0gZC5vmZBoLcZD',
          'currentData', null, 0, null, null, '<p>FB data error</p>, null');
         timeoutID = setTimeout('reloadData()', 1000);
 
