--- a/wicedhack/main.html
+++ b/wicedhack/main.html
@@ -5,9 +5,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../../styles/buttons.css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <title>Broadcom Facebook Controlled Application</title>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <title>Broadcom Facebook Lovechild</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="../../scripts/general_ajax_script.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -93,10 +93,16 @@
         timeoutID = setTimeout('reloadData()', 1000);
 
        }
+       function AutoRefresh( t ) {
+        loadfbdata();
+        //setTimeout("location.reload(true);", t);
+        setTimeout("location.reload(true);", t);
+      }
     /* ]]> */
     </script>
   </head>
-  <body onload="reloadData()" style="font-family:verdana;">
+  <!--<body onload="timer = setTimeout('loadfbdata()',1000)" style="font-family:verdana;">-->
+  <body onload="JavaScript:AutoRefresh(5000)" style="font-family:verdana;">
     <div class="container">
     <table class="table" border='0' cellpadding='0' cellspacing='0' width="98%">
       <tr style="height:20px"><td>&nbsp;</td></tr>
@@ -105,7 +111,7 @@
         <td style="width:117px"><img src="../../images/brcmlogo.png" alt="Broadcom Logo" /></td>
         <td style="width:20px;background-image:url('../../images/brcmlogo_line.png');"></td>
         <td style="vertical-align:middle; text-align:center; font: bold 25px/100% Verdana, Arial, Helvetica, sans-serif;background-image:url('../../images/brcmlogo_line.png');">
-        WICED&trade; Facebook Controlled Application
+        WICED&trade; Facebook Lovechild 
         </td>
         <td style="width:137px;background-image:url('../../images/brcmlogo_line.png');"></td>
       </tr>
@@ -114,7 +120,7 @@
       <div class = "well well-lg">
     <div id="currentData" >No Status to display
     </div>
-    <button type="button"  class="btn btn-primary" onclick="loadfbdata()">LoadFBData</button>
+    <button type="button"  class="btn btn-primary" onclick="loadfbdata()">Refresh FB Data</button>
   </div>
     <div class = "well well-lg" id="main_text" >
       <p> Manage your home... </p>
